[build-system]
requires = [
    "setuptools >= 70.1.0",
    "wheel",
    "build",
    "textual-serve",
    "pip"

]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
lint = [
    "pylint",
]
dev = [
    "textual-dev",
    "twine",
]

[project]
name = "EmpireStateRunUp"
version = "0.1.0"
authors = [
    {name = "Jose Vicente Nunez", email = "kodegeek.com@protonmail.com"},
]
description = "Collection of scripts to analyze the results of the Empire State Run Up race"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["running", "race", "empire state", "tower racing"]
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]
dependencies = [
    "pandas==2.2.2",
    "textual-dev==1.5.1",
    "textual==0.70.0",
    "textual-serve==1.0.1",
    "rich==13.7.1",
    "numpy==1.26.4",
    "matplotlib==3.8.3",
    "selenium==4.15.2"
]
license = {file = "LICENSE"}
[project.scripts]
esru_scraper = "empirestaterunup.runners:run_scraper"
esru_csv_cleaner = "empirestaterunup.runners:run_csv_cleaner"
esru_raw_cleaner = "empirestaterunup.runners:run_raw_cleaner"
esru_numbers = "empirestaterunup.runners:run_5_number"
esru_outlier = "empirestaterunup.runners:run_outlier"
esru_browser = "empirestaterunup.runners:run_browser"
esru_plot = "empirestaterunup.runners:simple_plot"
esru_server = "empirestaterunup.server:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

[tool.setuptools.package-data]
empirestaterunup = ["*.txt", "*.tcss", "*.csv"]
images = ["*.png", "*.svg"]


